--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,6 +7,7 @@
   --clr-bg-danger: #cf6679; // b00020
 
   --clr-bg-accent: #007aff; // b00020
+  --clr-bg-accent-50: rgb(92, 166, 245); // b00020
 
   --clr-fc-primary: #fff;
 
