--- a/src/scss/signup.scss
+++ b/src/scss/signup.scss
@@ -1,10 +1,12 @@
 .signup {
-  display: grid;
-  place-content: center;
   min-height: 100vh;
   background-color: var(--clr-bg-primary);
 
   &__wrapper {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: var(--clr-bg-secondary);
     padding: 1rem;
     border-radius: var(--brd-radius);
@@ -29,8 +31,8 @@
   &__input-group {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
-    margin-bottom: 1rem;
+    gap: 0.75rem;
+    margin-bottom: 1.5rem;
   }
 
   &__input {
@@ -39,6 +41,11 @@
     border-radius: var(--brd-radius);
     background-color: var(--clr-bg-tertiary);
     color: inherit;
+    transition: border-bottom 200ms;
+
+    &:focus {
+      border-bottom: 3px solid var(--clr-bg-accent-50);
+    }
   }
 
   &__submit-btn {
@@ -48,14 +55,14 @@
     background-color: var(--clr-bg-accent);
     color: var(--clr-white);
     border-radius: var(--brd-radius);
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
   }
 
   &__google-btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.75rem;
     padding: 0.5em 0.75em;
     margin-bottom: 1rem;
     width: 100%;
@@ -63,10 +70,16 @@
     font-size: 1.075rem;
     text-align: center;
     background-color: var(--clr-bg-primary);
+    transition: opacity 200ms;
+
+    &:hover,
+    &:focus {
+      opacity: 0.8;
+    }
   }
 
   &__google-img {
-    width: 1.45rem;
+    width: 1.3rem;
     border-radius: var(--brd-radius);
     background-color: transparent;
   }
