--- a/src/components/UserTile/styles.scss
+++ b/src/components/UserTile/styles.scss
@@ -9,6 +9,16 @@
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
+    max-width: 60%;
+  }
+
+  &__title,
+  &__sub-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__title {
@@ -18,11 +28,16 @@
 
   &__sub-title {
     font-size: 0.95rem;
-    max-width: 100%;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  }
+
+  &__action-btn {
+    margin-left: auto;
+    background: transparent;
+    transition: transform 200ms, color 200ms;
+
+    &:hover {
+      transform: scale(1.1);
+      color: var(--clr-bg-accent-50);
+    }
   }
 }
