--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,10 +4,11 @@
   --clr-bg-primary: #121212;
   --clr-bg-secondary: rgba(255, 255, 255, 0.14);
   --clr-bg-tertiary: rgba(255, 255, 255, 0.05);
+  --clr-bg-light: rgba(255, 255, 255, 0.14);
   --clr-bg-danger: #cf6679; // b00020
 
-  --clr-bg-accent: #007aff; // b00020
-  --clr-bg-accent-50: rgb(92, 166, 245); // b00020
+  --clr-bg-accent: #007aff;
+  --clr-bg-accent-50: rgb(92, 166, 245);
 
   --clr-fc-primary: #fff;
 
