--- a/src/components/UserTile/styles.scss
+++ b/src/components/UserTile/styles.scss
@@ -3,7 +3,12 @@
   align-items: center;
   gap: 0.75rem;
   padding: 1rem;
-  max-width: 20rem;
+  cursor: pointer;
+  transition: background-color 150ms;
+
+  &:hover {
+    background-color: var(--clr-bg-tertiary);
+  }
 
   &__text {
     display: flex;
