--- a/src/components/Avatar/styles.scss
+++ b/src/components/Avatar/styles.scss
@@ -1,7 +1,7 @@
 .avatar-circle {
   height: 3.5rem;
   width: 3.5rem;
-  background-color: var(--clr-bg-secondary);
+  background-color: var(--clr-bg-surface-2);
   border-radius: 50%;
   flex-shrink: 0;
   overflow: hidden;
