--- a/src/components/SearchBar/SearchedUsersList/styles.scss
+++ b/src/components/SearchBar/SearchedUsersList/styles.scss
@@ -4,7 +4,7 @@
   top: 100%;
   left: 0;
   width: 100%;
-  background-color: var(--clr-bg-secondary);
+  background-color: var(--clr-bg-surface-2);
   backdrop-filter: blur(6px);
 }
 
