--- a/src/components/SearchBar/styles.scss
+++ b/src/components/SearchBar/styles.scss
@@ -2,17 +2,25 @@
   position: relative;
   display: flex;
   align-items: center;
+  gap: 0.5rem;
   margin: 0 1rem 1rem;
   padding: 0.5rem 1rem;
 
-  background-color: var(--clr-bg-tertiary);
+  background-color: var(--clr-bg-surface-2);
   border-radius: var(--brd-radius);
+
   &__input {
     font-size: 1rem;
     width: 100%;
     background-color: transparent;
+
+    &::placeholder {
+      color: inherit;
+      opacity: 0.8;
+    }
   }
 
   &__search-icon {
+    font-size: 0.1rem;
   }
 }
