--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,15 +1,21 @@
 :root {
   --clr-white: #fff;
 
-  --clr-bg-primary: #121212;
-  --clr-bg-secondary: rgba(255, 255, 255, 0.14);
-  --clr-bg-tertiary: rgba(255, 255, 255, 0.05);
+  --clr-bg-base: #121212;
+  --clr-bg-surface-1: rgba(255, 255, 255, 0.1);
+  --clr-bg-surface-2: rgba(255, 255, 255, 0.14);
+
+  --clr-bg-surface-opp-2: rgba(0, 0, 0, 0.1);
+
   --clr-bg-danger: #cf6679; // b00020
 
-  --clr-bg-accent: #007aff;
-  --clr-bg-accent-50: rgb(92, 166, 245);
+  --clr-bg-primary: #007aff;
+  --clr-bg-primary-80: rgb(49, 145, 249);
+  --clr-bg-primary-50: rgb(92, 166, 245);
 
   --clr-fc-primary: #fff;
 
   --brd-radius: 0.25rem;
+
+  --gradient: linear-gradient(to right bottom, var(--clr-bg-primary), var(--clr-bg-primary-80));
 }
